<resources>
    <string name="app_name">WingsSale</string>
    <string name="login_title">LOGIN</string>
    <string name="username_ivhint">Username</string>
    <string name="password_ivhint">Password</string>
    <string name="dummy_prodname">Dummy_ProductName</string>
    <string name="dummy_prodrealprice">Rp X.XXX,-</string>
    <string name="dummy_proddiscprice"><strike>Rp Y.YYY,-</strike></string>
    <string name="dummy_proddiscprice_e1"><strike>Rp %d,-</strike></string>
    <string name="buy_btntext">BUY</string>
    <string name="checkout_btntext">CHECKOUT</string>
    <string name="price_title">Price</string>
    <string name="dimension_title">Dimension</string>
    <string name="dummy_proddimension">a cm X b cm</string>
    <string name="unit_title">Price Unit</string>
    <string name="dummy_produnit">PCS</string>
    <string name="dummy_prodamount">Z</string>
    <string name="btntext_confirm_purchase">CONFIRM</string>
    <string name="tv_subtotalTitle">Sub Total :</string>
    <string name="dummy_warning">This is Dummy Warning. Please Pay attention</string>
    <string name="warning_checkout_product">Please buy something before you proceed to Checkout</string>
    <string name="checkout_success">Checkout Success !</string>
    <string name="login_failed_desc">Login Failed. \nPlease double check your username and password</string>
</resources>